--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -84,7 +84,7 @@
 		</div>
 	</div>
   <div class="web_3_igaming_img">
-    <img class="web_images" src="assets/vrnl online sportbook software_11zon (1).jpg" alt="iGaming Casino Platform" title="Web3 plateform">
+    <img class="web_images" src="assets/vrnl online sportbook software_11zon (1).webp" alt="iGaming Casino Platform" title="Web3 plateform">
   </div>
 </div>
 
