--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -108,7 +108,7 @@
     </div>
 <div class="sportsbetting-complete-sports-col2">
       <img
-        src="assets\football image 3.png"
+        src="assets\football image 3.webp"
 
         class="web3_img"
         alt="sports betting"
