--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -1,14 +1,14 @@
 
 <header class="header">
   
-    <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/">
+    <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/" alt="logo">
 
 
   <nav class="navbar">
 
     <ul class="navbar-list">
       <li><a class="navbar-link" routerLink="/" >Vrnl</a></li>
-      <li><a  class="navbar-link" href="">Sports betting software <i class="fa-solid fa-angle-down"></i></a>
+      <li><a  class="navbar-link" href="#">Sports betting software <i class="fa-solid fa-angle-down"></i></a>
         <ul id="submenu" >
            <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
            <li><a routerLink="/sportsbook-iframe">Sportsbook iFrame   <i class="fa-solid fa-angle-down"></i></a>
@@ -64,7 +64,7 @@
         
         <ul  class="res_data_1">
             <div class="use_list_1" id="panel_1">
-            <li  (click)="animation1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
+            <li  (click)="animation1()"><a href=""> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
            <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
         <li> <a routerLink="/sportsbook-iframe">Sportsbook IFrame </a></li>
             <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
@@ -77,7 +77,7 @@
         
           <ul  class="res_data_1">
               <div class="use_list_1" id="panel_2">
-              <li  (click)="animation_2()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
+              <li  (click)="animation_2()"><a href=""> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
               <li><a routerLink="/casino/casino-games">Casino games</a></li>
               <li><a routerLink="/casino/live-casino">Live Casino</a></li>
               <li><a routerLink="/casino/lottery-games">Lottery</a></li>
@@ -91,7 +91,7 @@
         
           <ul  class="res_data_1">
               <div class="use_list_1" id="panel_3">
-              <li  (click)="animated_1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
+              <li  (click)="animated_1()"><a href=""> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
               <li><a routerLink="/web3-sportsbook">Web3 Sportsbook</a></li>
               <li><a routerLink="/web3-casino">Web3 Casino</a></li>
               <li><a routerLink="/bitcoin-sportsbook">Bitcoin Sportsbook</a></li>
@@ -106,7 +106,7 @@
         
             <ul  class="res_data_1">
                 <div class="use_list_1" id="panel_4">
-                <li (click)="anime_1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
+                <li (click)="anime_1()"><a href=""> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
                 <li><a routerLink="/about-us">About</a></li>
                
           
