--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -18,6 +18,11 @@
   width: 35%;
  margin-top: 3%;
 }
+.web3_img {
+  width: 100%;
+  height: auto;
+  margin-top: 93px;
+}
 .sportsbetting-section1-col1 strong {
   font-style: normal;
   line-height: 1.3;
@@ -2316,6 +2321,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   .sportsbetting-mainfeature-col2 h2{
     width: 100%;
   }
+
 }
 .sportsbetting-section1-button button:hover{
   border-top-color: rgb(109,140,1);
@@ -2334,7 +2340,5 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-left: 13px;
   }
 }
-.web3_img{
-  width: 629px;
-  height: 455px;
-}
+
+
