--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -30,7 +30,7 @@
       <div class="platform_col_2">
         <img
           class="platform_img ai-img1"
-          src="assets/ai-safebet_lion.webp"
+          src="assets/Risk Management Team2.webp"
         width="544" height="310"
         alt="vrnl">
         <div class="platform_you_tube">
