--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -2,66 +2,50 @@
   <header class="page-header" [class.is-sticky]="isSticky">
     <nav>
       <div class="hader_row">
-       
-        <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/" alt="logo">
-        
+        <img
+          class="images_logo"
+          src="assets/VRNL new LOGO copy.webp"
+          routerLink="/"
+          alt="logo"
+        />
+
         <div class="nav_col_1">
           <ul class="nav_col_2">
-            <li  routerLink="/white-label-betting-platform"><a href="#"> WHITE LABEL SPORTSBOOK </a> </li>
+            <li routerLink="/white-label-betting-platform">
+              <a href="#"> WHITE LABEL SPORTSBOOK </a>
+            </li>
 
-            <li><a href="#">WHITE LABEL CASINO </a> <i class="fa-solid fa-angles-down"></i>
+            <li>
+              <a href="#">WHITE LABEL CASINO </a>
+              <i class="fa-solid fa-angles-down"></i>
               <div class="sub_menu">
                 <ul>
-                  <li> <a routerLink="/casino/casino-games"> Casino games</a></li>
-                  <li> <a routerLink="/casino/live-casino"> Live casino</a></li>
-                  <li> <a routerLink="/casino/lottery-games">Lottery Games</a> </li>
-                  <li> <a routerLink="/casino/tournaments">Casino tournament</a></li>
-
-
-
+                  <li>
+                    <a routerLink="/casino/casino-games"> Casino games</a>
+                  </li>
+                  <li><a routerLink="/casino/live-casino"> Live casino</a></li>
+                  <li>
+                    <a routerLink="/casino/lottery-games">Lottery Games</a>
+                  </li>
+                  <li>
+                    <a routerLink="/casino/tournaments">Casino tournament</a>
+                  </li>
                 </ul>
               </div>
-
-
             </li>
-            <!-- <li><a href=""> WEB3 </a> <i class="fa-solid fa-angles-down"></i>
-        <div class="sub_menu">
-            <ul>
-                <li> <a routerLink="/web3-casino"> Web3 casino</a> </li>
-                <li> <a routerLink="/crypto-casino"> Crypto Casino </a></li>
-            </ul>
-        </div>
-    
-    </li> -->
-            <li><a href="#"> COMPANY </a> <i class="fa-solid fa-angles-down"></i>
+
+            <li>
+              <a href="#"> COMPANY </a> <i class="fa-solid fa-angles-down"></i>
 
               <div class="sub_menu">
                 <ul>
-                  <li> <a routerLink="/about-us"> About</a></li>
-                  <li> <a routerLink="/"> Sportsbook software provider</a></li>
-                  <!-- <li> <a routerLink="/certified-sports-betting-software">Certification</a> </li> -->
-                  <li> <a routerLink="/contact">Contact Us</a></li>
-
-
-
-
+                  <li><a routerLink="/about-us"> About</a></li>
+                  <li><a routerLink="/"> Sportsbook software provider</a></li>
+                  <li><a routerLink="/contact">Contact Us</a></li>
                 </ul>
               </div>
-
             </li>
-            <li routerLink="/our-theme">
-              Our Work
-            
-              <!-- <img src="assets/download.png"> ENGLISH <i class="fa-solid fa-angles-down"></i> -->
-              <!-- <div class="sub_menu">
-                <ul>
-                  <li class="font-color"><img src="assets/download.png"> English</li>
-                  <li class="font-color"><img src="assets/download (1).png"> Esponal</li>
-                </ul>
-              </div> -->
-
-
-            </li>
+            <li routerLink="/our-theme">Our Work</li>
           </ul>
         </div>
       </div>
@@ -70,10 +54,19 @@
 </div>
 <div class="responsive_nav">
   <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid" >
-      <a class="navbar-brand" href="#" aria-label="logo" ><img src="assets/VRNL new LOGO copy.webp" alt="logo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" aria-label="logo"
+        ><img src="assets/VRNL new LOGO copy.webp" alt="logo"
+      /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -81,68 +74,104 @@
           <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
-                <button class="accord_btn collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" routerLink="/white-label-betting-platform">
+                <button
+                  class="accord_btn collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                  routerLink="/white-label-betting-platform"
+                >
                   <a href="#"> WHITE LABEL SPORTSBOOK </a>
                 </button>
               </h2>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseTwo"
+                >
                   WHITE LABEL CASINO
                 </button>
               </h2>
-              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body"> <a routerLink="/casino/casino-games">Casino games</a></div>
-                <div class="accordion-body"> <a routerLink="/casino/live-casino">Live casino</a> </div>
-                <div class="accordion-body"><a routerLink="/casino/lottery-games">Lottery Games</a></div>
-                <div class="accordion-body"><a routerLink="/casino/tournaments">Casino tournament</a></div>
-
-
-
+              <div
+                id="flush-collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  <a routerLink="/casino/casino-games">Casino games</a>
+                </div>
+                <div class="accordion-body">
+                  <a routerLink="/casino/live-casino">Live casino</a>
+                </div>
+                <div class="accordion-body">
+                  <a routerLink="/casino/lottery-games">Lottery Games</a>
+                </div>
+                <div class="accordion-body">
+                  <a routerLink="/casino/tournaments">Casino tournament</a>
+                </div>
               </div>
             </div>
-          
 
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingFour">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseFour"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseFour"
+                >
                   COMPANY
                 </button>
               </h2>
-              <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
-                data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body"> <a routerLink="/about-us">About</a></div>
-                <div class="accordion-body"><a routerLink="/">Sportsbook software provider</a></div>
-  
-                <div class="accordion-body"><a routerLink="/contact">Contact Us</a></div>
+              <div
+                id="flush-collapseFour"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingFour"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  <a routerLink="/about-us">About</a>
+                </div>
+                <div class="accordion-body">
+                  <a routerLink="/">Sportsbook software provider</a>
+                </div>
 
-
+                <div class="accordion-body">
+                  <a routerLink="/contact">Contact Us</a>
+                </div>
               </div>
             </div>
 
-            <div class="accordion-item" >
+            <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
-                <button class="accord_btn collapsed" type="button" data-bs-toggle="collapse" routerLink="/our-theme"
-                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="cursor:pointer;">
-                  <a href="#">  Our Work </a>
+                <button
+                  class="accord_btn collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  routerLink="/our-theme"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                  style="cursor: pointer"
+                >
+                  <a href="#"> Our Work </a>
                 </button>
               </h2>
-          
-            
             </div>
-
-
-
-
           </div>
         </div>
       </div>
     </div>
   </nav>
-
 </div>
