--- a/src/styles.css
+++ b/src/styles.css
@@ -6678,7 +6678,7 @@ line-height: 30px;
 } */
 
 .first-sec {
-    background: url('assets/breadcumbs.jpg.webp');
+    background: url('assets/Untitled-6.png');
 
     background-size: cover;
 
