--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -1,5 +1,5 @@
 <app-header3></app-header3>
-<section>
+<section class="mobile_tv">
     <div class="mobile-sports-main">
         <div class="mobile-sports-left">
            
