--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -34,7 +34,7 @@
     </div>
 
 <div class="sports_book_col_1">
-<img class="Online sportsbook software" src="assets/online-vrnl-2.webp" alt="Online sportsbook software" width="468 " height="463">
+<img class="Online sportsbook software" src="assets/.webp" alt="Online sportsbook software" width="468 " height="463">
 </div>
 
 </div>
