--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -153,7 +153,7 @@
           </div>
       <div class="crypto-section6-right">
           <h2>Lottery and Bingo games online and retails</h2>
-          <img class="lottery_img" src="assets/sirplay vrnl 13.webp" alt="Lottery and Bingo Games">
+          <img class="lottery_img" src="assets/bingo vrnl 13.webp" alt="Lottery and Bingo Games">
           </div>
         </div>
       </section>
