--- a/src/app/esport/esport.component.css
+++ b/src/app/esport/esport.component.css
@@ -1219,7 +1219,7 @@ Responsive Codes
   color: rgb(87, 87, 86);
 }
 
-.esports-betting-col2 img {
+/* .esports-betting-col2 img {
   width: 100%;
 } */
 
