--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -14,16 +14,18 @@
     <div class="label-bet">
       <div class="label-para">
         <p> 
-          Vrnl’s <b  class="bold"> white label sportsbook solution</b> offers a comprehensive, fully managed sportsbook platform.
+          Vrnl’s <b class="bold">white label sportsbook solution</b> offers a comprehensive, fully managed sportsbook platform.
           <br />
-          </p>
-          <p>
+        </p>
+        <p>
           One of the standout features of our solution is its exceptional
           <b class="bold">speed in website creation and deployment</b> Our dedicated team can have your sportsbook website up and running within just ten working days, 
-          <b class="bold">tailored precisely to your unique requirements.</b> <br /></p>
-<p>
-          <b class="bold"> Our service includes specialized hosting</b> ,all the necessary software, live sports odds data feeds, risk management tools, and top-notch customer support services.
+          <b class="bold">tailored precisely to your unique requirements.</b> <br />
         </p>
+        <p>
+          <b class="bold">Our service includes specialized hosting</b>, all the necessary software, live sports odds data feeds, risk management tools, and top-notch customer support services. We are a leading white label betting platform.
+        </p>
+        
       </div>
       <div class="label-img">
         <img
@@ -37,14 +39,14 @@
       <ul class="label-list1">
         <li>
           Website Development, <b>Branding, Tailoring</b>, and Rigorous Testing of
-          the clients’ sportsbook
+          the clients’ sportsbook	
         </li>
         <li>Regular Ongoing Enhancements and Feature Updates</li>
         <li>
           <b>Hardware Provisioning</b>, Hosting, Continuous 24/7 Vigilance, and Comprehensive Support
         </li>
         <li>
-          <b>Diverse Array of Betting Markets</b>, , Sports Categories, and League Offerings
+          <b>Diverse Array of Betting Markets,</b> Sports Categories, and League Offerings
         </li>
         <li>Efficient Bet Acceptance and Accurate Settlement Processes</li>
         <li>Advanced Risk Management, Robust Accounting, and Vigilant Monitoring Tools</li>
@@ -63,7 +65,7 @@
         <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
         <h2 class="sec-header">Be unique</h2>
         <p>
-          <b class="bold">Vrnl's dedicated consultants will diligently gather your requirements </b>and present you with a curated selection of templates and recent development achievements. It's important to note that all of our platforms are designed to be multilingual and support multiple currencies, and the user interface (UI) will be meticulously adapted to suit your specific needs. <br />
+          <b class="bold">Vrnl's dedicated consultants will diligently gather your requirements </b>and present you with a curated selection of templates and recent development achievements. It's important to note that all of our white label betting platform, are designed to be multilingual and support multiple currencies, and the user interface (UI) will be meticulously adapted to suit your specific needs. <br />
 
           <br />
           Embark on your journey into the realm of Vrnl, where your unique vision comes to life.
@@ -84,11 +86,8 @@
         <h1 class="bottom-marg letter-spacing font-weight">Odds</h1>
         <h2 class="sec-header sec-line">The engine of the platform</h2>
         <p>
-          We have already
-          <b class="bold">
-            We have already seamlessly integrated the world's </b> premier odds providers into our system, and if that doesn't suffice for your requirements, we are more than willing to incorporate your preferred choice as well. <br />
-<br />
-</p>
+          As a leading <b class="bold">white label sports betting platform </b> and <b class="bold"> white label betting platform</b>, we have already seamlessly integrated the world's premier odds providers into our system, and if that doesn't suffice for your requirements, we are more than willing to incorporate your preferred choice as well.
+        </p>
 <div class="niva-separator2"
           style="
             height: 4px;
