--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -15,13 +15,13 @@
 <section class="platform_sec">
   <div class="platform_row">
     <div class="platform_col">
-      <h1 class="platform_header">One Platform, many solutions</h1>
+      <h1 class="platform_header">Sport Betting Software Solutions</h1>
 
       <p class="platform_para">
-        Our Sports Betting and Casino software is fully adaptable to suit your specific market and requirements.
-      </p>
+        Sport Betting software solutions have redefined the sports betting experience. Their user-friendly interfaces, advanced analytics, and live betting options make them a go-to choice for both novice and experienced bettors. With the convenience and excitement they bring, it's no wonder that these solutions are revolutionizing the industry.      </p>
       <p class="platform_para">
-        The following options are at your disposal: Online and retail Sportsbook software, B2C, Casino, or White Label
+        Now that you're well-versed in Sports Betting software solutions, you can embark on your betting journey with confidence. Make the most of the technology at your disposal and enjoy the thrill of sports betting like never before.
+        Tfhe ollowing options are at your disposal: Online and retail  Sports Betting software, B2C, Casino, or White Label
         solutions.
       </p>
       <h2 class="header_plat">Try our B2B Betting software</h2>
@@ -52,15 +52,15 @@
   <div class="whites_row">
     <div class="whites_col">
       <h2 class="white_header">
-        Choose among Turnkey and White Label Solutions
+        White Label Solutions and Turnkey
       </h2>
       <p class="white_para">
-        Have you already applied for a gaming license? Then explore our Turnkey <a href="/chck.html"><span
+        As a white label provider, VRNL empowers your business to offer a diverse range of products and services under your brand name. This approach allows you to expand your offerings quickly and efficiently, giving your customers a seamless experience <a href="/chck.html"><span
             class="white_change"><a routerLink="/sports-betting-software" class="white_change">sports betting
               software</a></span></a>.</p>
       <p class="white_para">
-        If you haven't applied yet, you can either leverage our existing license or initiate the application process for
-        a <span class="white_change"><a routerLink="/white-label-betting-platform" class="white_change">white label
+        VRNL's white label solutions are not only a time-saver but also a cost-effective way to grow your business without the burden of developing products from scratch. This strategic move can significantly boost your profitability
+<span class="white_change"><a routerLink="/white-label-betting-platform" class="white_change">white label
             sportsbook</a></span>.</p>
       <p class="white_para">
         In either scenario, we provide a comprehensive, high-performing, and secure betting platform certified by
