--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -18,10 +18,10 @@
       <h1 class="platform_header">Sport Betting Software Solutions</h1>
 
       <p class="platform_para">
-        Sport Betting software solutions have redefined the sports betting experience. Their user-friendly interfaces, advanced analytics, and live betting options make them a go-to choice for both novice and experienced bettors. With the convenience and excitement they bring, it's no wonder that these solutions are revolutionizing the industry.      </p>
+        Sport Betting software solutions have redefined the sports betting experience. Their user-friendly interface, advanced analytics, and live betting options make them a go-to choice for both novice and experienced bettors. With the convenience and excitement they bring, it's no wonder that these solutions are revolutionizing the industry.      </p>
       <p class="platform_para">
-        Now that you're well-versed in Sports Betting software solutions, you can embark on your betting journey with confidence. Make the most of the technology at your disposal and enjoy the thrill of sports betting like never before.
-        Tfhe ollowing options are at your disposal: Online and retail  Sports Betting software, B2C, Casino, or White Label
+        Now that you're well-versed with Sports Betting software solutions, you can embark on your betting journey with confidence. Make the most out of this technology at your disposal and enjoy the thrill of sports betting like never before.
+        The following options are at your disposal: Online and Retail  Sports Betting software, B2C, Casino and White Label
         solutions.
       </p>
       <h2 class="header_plat">Try our B2B Betting software</h2>
@@ -55,15 +55,15 @@
         White Label Solutions and Turnkey
       </h2>
       <p class="white_para">
-        As a white label provider, VRNL empowers your business to offer a diverse range of products and services under your brand name. This approach allows you to expand your offerings quickly and efficiently, giving your customers a seamless experience <a href="/chck.html"><span
+        As a white label provider, VRNL empowers your business to offer a diverse range of products and services under your brand name. This approach allows you to expand your offerings quickly and efficiently, giving your customers a seamless experience of <a href="/chck.html"><span
             class="white_change"><a routerLink="/sports-betting-software" class="white_change">sports betting
               software</a></span></a>.</p>
       <p class="white_para">
-        VRNL's white label solutions are not only a time-saver but also a cost-effective way to grow your business without the burden of developing products from scratch. This strategic move can significantly boost your profitability
+        VRNL's white label solutions are not only a time-saver but also a cost-effective way to grow your business without the burden of developing products from scratch. This strategic move can significantly boost your profitability with
 <span class="white_change"><a routerLink="/white-label-betting-platform" class="white_change">white label
             sportsbook</a></span>.</p>
       <p class="white_para">
-        In either scenario, we provide a comprehensive, high-performing, and secure betting platform certified by
+        In either scenario, we provide a comprehensive, high-performing and secure betting platform certified by
         independent gaming laboratories.
       </p>
       <br />
@@ -85,12 +85,9 @@
     <div class="gaming_col_2">
       <h1 class="gaming_header">iGaming Platform</h1>
       <p class="gaming_para">
-        Explore the most extensive array of entertainment games available online, featuring our <span
-          class="white_change" routerLink="/casino">White Label Casino</span> with over 1,000 games.</p>
-      <p class="gaming_para">
-        Experience rapid activation of multiple products and brands, tailored for FIAT.
-    
-      </p>
+        VRNL is a trusted partner in the world of iGaming. As a leading provider of iGaming platforms, we are dedicated to revolutionizing the online gaming experience. Our mission is simple: to empower gaming operators with a versatile and cutting-edge platform that delivers seamless and engaging gameplay to their players.
+       </p>
+      
       <br />
       <br />
       <div class="white_back"></div>
@@ -105,8 +102,12 @@
       <h1 class="casino_header">Online Casino</h1>
 
       <p class="casino_para">
+        Welcome to VRNL Online Casino, where excitement, entertainment and winning opportunities collide. As a leading name in the online casino industry, we take pride in offering a thrilling and secure gaming platform for players worldwide. Our mission is simple: to provide an unmatched online casino experience that keeps you coming back for more.
+
+
         Our <span class="white_change" routerLink="/online-casino-software">online casino software</span> is
-        user-friendly, in line with our platform's easy manageability.</p>
+        user-friendly.
+      </p>
       <ul class="casino_list">
         <li>Over 75 providers</li>
         <li>Exceeding 15,000 slot machines</li>
@@ -169,12 +170,15 @@
         alt="Integration with other platforms" />
     </div>
     <div class="integration_col_1">
-      <h1 class="integration_header">Integration with other platforms</h1>
-      <h1 class="integration_header_1">iFrame & APIs</h1>
+      <h1 class="integration_header">API Service Providers and iFrame</h1>
+      
       <p class="integration_para">
-        Our platform offers effortless integration options through iFrames or APIs. Additionally, it can be transformed
-        into a comprehensive service integration, a complete sports betting solution, or dedicated access to casino
-        games, including live casino offerings.
+        At VRNL, we take pride in being a leading API service provider and iFrame solutions specialist. We offer innovative and reliable services to businesses of all sizes, helping them streamline their processes, enhance user experiences and achieve their digital goals.
+      </p>
+
+      <p class="integration_para">
+        At VRNL, we understand the importance of seamless data exchange and communication between applications. We provide top-notch API integration services, allowing your software to interact effortlessly with other platforms. Our experts will ensure that your systems function harmoniously, providing a smooth experience for both you and your customers.
+
       </p>
 
       <br />
@@ -190,12 +194,16 @@
     <div class="integration_col">
       <h1 class="virtual_header">Virtual Games
       </h1>
-      <h1 class="virtual_header_1">Online and Retail
-      </h1>
+
+     
       <p class="integration_para">
-        Virtual Gaming enables your players to relish the immersive experience of every challenge and bet, bringing the
-        excitement of live action to the forefront. Moreover, the Virtual Gaming module is compatible with both online
-        and land-based bookmakers, facilitating integration via iFrame and API.
+        Ready to embark on your virtual gaming journey with VRNL? Dive into the virtual world like never before and get ready for endless hours of entertainment.
+      </p>
+      <a class="platform_anchor" href="https://www.betskyexch.com/" target="_blank">
+        <p>https://www.betskyexch.com/</p>
+      </a>
+      <p class="integration_para">
+        At VRNL, we're passionate about delivering cutting-edge virtual gaming experiences that transport players to exciting new worlds. Our mission is to provide the most immersive, entertaining, and mind-bending virtual games that will keep you hooked for hours.
       </p>
 
       <br />
