--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -51,8 +51,8 @@
             </li>
 
             <li>
-              <a class="act" href="#">Risk Management</a>
-              <div class="sub_menu">
+              <a class="act" routerLink="/risk-management">Risk Management</a>
+              <!-- <div class="sub_menu">
                 <ul>
                   <li>
                     <a routerLink="/risk-management">Risk Management</a>
@@ -61,7 +61,7 @@
                     <a routerLink="/betting-trade-master">Betting Trade Master</a>
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </li>
 
 
@@ -207,7 +207,7 @@
             </div>
           </div>
 
-          <div class="accordion-item">
+          <!-- <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree1">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseThree1" aria-expanded="false" aria-controls="flush-collapseThree1">
@@ -223,6 +223,15 @@
                 <a routerLink="/betting-trade-master">Betting Trade Master</a>
               </div>
             </div>
+          </div> -->
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingten">
+              <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
+                <a routerLink="/risk-management"> Risk Management</a>
+              </button>
+            </h2>
           </div>
 
           <div class="accordion-item">
