--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -6,11 +6,11 @@
     <div class="white_casino_row whites_label">
         <div class="white_casino_col">
     <h1 class="white_c_header"><span>Online</span> Casino platform</h1>
-
-    <p class="white_c_param">We provide a <strong> White Label Casino </strong>solution complete with Trading Software and a suite of advanced tools.
+    <!-- "VRNL's Online Casino Platform takes online gaming to the next level. Offering a wide array of games, our platform ensures endless entertainment for players. With our White Label Casino solution, you can launch your own branded casino effortlessly, all backed by our unwavering commitment to safety and security. We provide 24/7 support and seamless integration, allowing you to boost your revenue and join the VRNL revolution in the world of online casino gaming. -->
+    <p class="white_c_param">VRNL's provide a <strong> Online Casino Platform </strong>takes online gaming to the next level.
     
     </p>  
-    <p class="white_c_param_2">Our <strong>online casino platform</strong> is known for its simplicity, making it easily manageable whether you're a newcomer or a seasoned professional. At Vrnl, we are committed to offering the guidance and support required to <strong>kickstart your online casino venture.</strong></p>
+    <p class="white_c_param_2">Offering a wide array of games, our platform ensures endless entertainment for players.With our White Label Casino solution, you can launch your own branded casino effortlessly, all backed by our unwavering commitment to safety and security. We provide 24/7 support and seamless integration, allowing you to <strong>boost your revenue and join the VRNL revolution in the world of online casino gaming.</strong></p>
     <p></p>
     
     <em class="white_c_param">Before you take the plunge, we invite you to witness its seamless operation in action.</em>
