--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -16,7 +16,8 @@
     font-size: 34px;
     color: #000000;
     line-height: 34px;
-    text-align: left;}
+    text-align: left;
+line-height: 1.3;}
 @media screen and (max-width: 820px){
     .white_label_imgs{
         width: 100%;
