--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -9,11 +9,11 @@
             <h1 class="left-index3-h1">The world's most extensive  catalogue of 
             <b style="font-family: 'Raleway', sans-serif; font-size: 40px; font-weight: bold;">Online Casino games</b></h1>
 
-            <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b>Casino  provides you with an unparalleled selection of over 3,000 slots and casino games, making it the broadest range available online.<br><br></p>
+            <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b> is your ultimate destination, providing you with an unmatched assortment of over 3000 thrilling casino games and slots. We pride ourselves on offering the most comprehensive range of online casino games available on the internet.<br><br></p>
 
             <p class="left-text-index3-bold" ><b>We cater to online gaming operators, bookmakers, lotteries, and betting organizations operating in regulated markets.  </b> <br><br></p>
 
-            <p class="left-text-index3-paras">Our gaming mathematics are not only secure but also certified by independent gaming laboratories. This certification ensures the highest level of user experience for your players, making their gaming experience top-notch.<br><br></p>
+            <p class="left-text-index3-paras">We understand the importance of secure and fair gameplay in the world of online casinos. That's why our gaming mathematics are not only robust but also certified by independent gaming laboratories. This certification guarantees the utmost level of user experience for your players, making their online casino gaming experience truly top-notch.<br><br></p>
 
 
 
@@ -88,13 +88,15 @@
         </div>
     
         <div class="index3-right-text">
-            <h1>We Provide Online Turnkey Casino Solutions, Literally!<br></h1>
-            <p><b class="index3-right-text-bold">Casino White Label Solution</b></p>
-            <p><b class="index3-right-text-bold">Logo & Website Branding</b></p>
-            <p><b class="index3-right-text-bold">Trading Tools (training)</b></p>
-            <p><b class="index3-right-text-bold"> Payment Gateway Processors</b></p>
-            <p><b class="index3-right-text-bold">Marketing & Promotion Services</b></p>
-            <p><b class="index3-right-text-bold">Client Support</b></p>
+            <h1 class="left-index3-h1">We Provide Online Turnkey Casino Solutions, Literally!<br></h1>
+            <li><strong>Casino White Label Solution</strong></li>
+            <p style="margin-left: 24px;">Launch your own branded casino with ease using VRNL's white label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly</p>
+            <li><strong> Website Brandingli</strong> </li>
+            <p style="margin-left: 24px;">Elevate your online presence with VRNL's expert website branding services. We design, create, and transform websites to reflect your unique identity, leaving a lasting impression</p>
+            <li><strong> Tools (training)</strong></li>
+            <p style="margin-left: 24px;">Unlock your potential in the world of trading with VRNL's powerful trading tools. Our cutting-edge solutions empower you with the insights and technology to make informed decisions and maximize your trading success</p>
+            <li><strong>Client Support</strong></li>
+            <p style="margin-left: 24px;">enhance your client experience with VRNL's exceptional client support services. Our dedicated team is here to provide expert assistance, ensuring your clients' needs are met with efficiency and care</p>
             
         </div>
     
