--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -11,7 +11,7 @@
       </h1><p>
         We offer a bespoke Sports Betting software solution that includes Odds Trading and Tools. This solution is meticulously tailored to meet the unique demands and preferences of our customers, providing a comprehensive Sportsbook Platform.
       </p>
-<p> Our team of specialists will collaborate closely with you, gaining a deep understanding of your specific requirements and the market dynamics. We will guide you through every stage of the development process, ensuring a customized and reliable solution that aligns perfectly with your goals and the needs of your target market.
+<p> Our team of specialists, as your trusted sports betting software provider, will collaborate closely with you, gaining a deep understanding of your specific requirements and the market dynamics. We will guide you through every stage of the development process, ensuring a customized and reliable solution that aligns perfectly with your goals and the needs of your target market.
 </p>
 <h3>Try our B2B Betting software</h3>
       <div class="sportsbetting-section1-col1-link">
