--- a/src/app/casino-games/casino-games.component.css
+++ b/src/app/casino-games/casino-games.component.css
@@ -52,7 +52,7 @@ b{
 font-size: 45px;
 font-family: 'Raleway', sans-serif;  
 font-weight: 500;
-margin-right: calc(-1.999em * -1);
+/* margin-right: calc(-1.999em * -1); */
 line-height: 1.3;
 letter-spacing: 0.001em;
 color: #575756;
