--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -88,7 +88,7 @@
         </div>
     
         <div class="index3-right-text">
-            <h1 class="left-index3-h1">We Provide Online Turnkey Casino Solutions, Literally!<br></h1>
+            <h1 class="left-index3-h1" style="font-weight: bold; color: #a0c528;">We Provide Online Turnkey Casino Solutions<br></h1>
             <li><strong>Casino White Label Solution</strong></li>
             <p style="margin-left: 24px;">Launch your own branded casino with ease using VRNL's white label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly</p>
             <li><strong> Website Brandingli</strong> </li>
