--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -4,13 +4,13 @@
     <div class="container1_row">
       <div class="online-casino_col">
         <h1 class="online-casino_header" style="font-family: 'Raleway', sans-serif">
-          Online Casino Software
+          Online casino software
         </h1>
         <div class="wpb_text_column wpb_content_element  vc_custom_1673977594688">
           <div class="wpb_wrapper">
-            <p>VRNL is a leading provider of <strong> casino software and platforms</strong>. They play a crucial role in designing and developing casino platforms, ensuring that they are user-friendly and feature-rich.</p>
+            <p>VRNL is a leading provider of casino software and platforms. They play a crucial role in designing and developing casino platforms, ensuring that they are user-friendly and feature-rich.</p>
             <p>Our marketing team will work diligently to ensure that your online casino receives prominent placement on the front page, guaranteeing high visibility in the online market.</p>
-            <p> online casino platform will come equipped with a variety of pre-configured games, and our monitoring tools will provide you with a clear, real-time overview of the progress and performance of your new venture.</p>
+            <p> The online casino platform will come equipped with various pre-configured games, and our monitoring tools will provide you with a clear, real-time overview of the progress and performance of your new venture.</p>
             <p>&nbsp;</p>
         </div>
         </div>
@@ -62,7 +62,7 @@
 <div class="col2-text">
         <h1 class="col2-head">Casino Software Main features<br /></h1>
         <p class="casino_whites_sec_p">
-          Our <strong> software platform</strong> stands at the forefront of the market, providing bookmakers with complete control and visibility over their players, all from a central hub.<br /><br />
+          Our <strong>casino software platform</strong>  is designed to provide a seamless and immersive gaming experience for both players and operators.<br /><br />
         </p>
 <p class="clasico_f">Key features of our platform include:<br /><br /></p>
 <ol class="updates_list">
@@ -102,8 +102,7 @@
     <div class="container5-row">
 <div class="container5-col2">
         <h1>
-          External integration with other<br />
-          platforms through iFrame & APIs
+          Integrating with external platforms via iFrames and APIs
         </h1>
         <p>
           Our platform offers versatile integration options. You can seamlessly
