--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -85,7 +85,7 @@
           Our new platform operates as an autonomous, agile, and flexible system. This agility allows us to promptly <br /> respond to bookmakers' requests and uphold higher quality standards when developing new and existing<br/> products.
         </p>
         <p class="casino_whites_sec_p">
-          To accelerate your business, we also offer a <span routerLink="/casino" style="color: #a0c528;"> White Label Casino</span> with a vast selection of over 10,000 games.
+          To accelerate your business, we also offer a <span routerLink="/casino" style="color: #a0c528;"> White Label Casino</span> with a vast selection of over 3000+ games.
         </p>
 
         <div class="seprator" style="
