--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -30,10 +30,10 @@
     <img class="tv_image" src="assets/vrnl crypto tv2 (1).webp" alt="White label casino">
             </div>
             <div class="white_f_col_1">
-    <h1 class="white_c_header">White label casino <span style="font-weight:100">Main features</span></h1>
+    <h1 class="white_c_header">White-label casino <span style="font-weight:100">main  features</span></h1>
     <p class="white_f_p">We offer an extensive array of tools designed to empower you in the management of our online casino platform. Among these, we've distilled the selection to focus on the most influential and, significantly, the indispensable ones required for thriving in the competitive global arena:</p>
     <ul class="white_f_list">
-        <li> <strong class="black-color">The most extensive catalog of online casino games worldwide,</strong> meticulously selected from the industry's top-rated providers.
+        <li> <strong class="black-color">The most extensive catalog of online casino games worldwide,</strong> meticulously selected from the industry's top-rated providers
         </li>
         <li> <strong class="black-color">Tools for Bonuses</strong> and Slot Profitability Optimization
         </li>
@@ -51,11 +51,11 @@
      <div class="whites_content">
     <h1 class="whites_h1">Which will be the benefits?</h1>
     <h2 class="whites_h3">Let us Explain</h2>
-   <p class="whites_param"> <span class="head_para">If you're considering entering the Online Gambling business, a <strong style="color: rgb(87 87 86);">casino White Label solution could be your stepping stone.</strong></span> </p>
+   <p class="whites_param"> <span class="head_para">Thinking about stepping into the world of online betting? VRNL Company offers a <strong style="color: rgb(87 87 86);">casino white-label solution that can be your perfect starting point.</strong></span> </p>
 <p class="param_fea">
-    Leverage our professional services and expertise, in addition to our <strong>Casino platforms</strong> and cutting-edge technology. Our regulated partners receive comprehensive support to embark on their journey into the online Casino industry, and they have the option of branded or non-branded versions of our platforms.</p>
-<p class="param_fea">Initiating an Online Casino venture can be a complex endeavor! That's why we've crafted a comprehensive Casino environment, featuring the finest gaming providers, to provide you with the broadest array of slots and casino games available online, boasting <strong>over 1,000 games</strong>. The gaming math is secure and certified for your peace of mind.</p>
-<p class="param_fea">With an array of robust risk management tools that enable swift and effortless setup, your platform is poised for expansion as your business grows.</p>
+    Utilize our professional services and expertise, along with our advanced <strong>casino platforms</strong> and technology. Our regulated partners benefit from extensive support as they enter the online casino industry, with the choice of branded or non-branded platform versions.</p>
+<p class="param_fea">Initiating an online casino venture can be a complex journey. That's why we've created a complete casino environment, offering top gaming providers and over 1,000 games. Our gaming math is secure and certified, ensuring your peace of mind.</p>
+<p class="param_fea">Expand your business effortlessly with our platform's robust risk management tools for swift and easy setup.</p>
     <div class="whites_label">
         <div>
             <span>
