--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <section class="first-sec">
   <div class="first-head">
-    <h1>White Label Betting Platform</h1>
+    <h1>White Label Betting platform</h1>
     <div class="home">
       <a href="/index.html" class="dash">Home -</a>
       <span class="lil-para">White Label Betting Platform</span>
@@ -19,7 +19,7 @@
         </p>
         <p>
           One of the standout features of our solution is its exceptional
-          <b class="bold">speed in website creation and deployment</b> Our dedicated team can have your 
+          <b class="bold">speed in website creation and deployment.</b> Our dedicated team can have your 
           website up and running within just ten working days,
           <b class="bold">tailored precisely to your unique requirements.</b> <br />
         </p>
@@ -38,16 +38,16 @@
       <ul class="label-list1">
         <li>
           Website Development, <b>Branding, Tailoring</b>, and Rigorous Testing of
-          the clients’ exchange
+          the Clients’ Exchange
         </li>
-        <li>Regular Ongoing Enhancements and Feature Updates</li>
+        <li>Regular ongoing enhancements and feature updates</li>
         <li>
           <b>Hardware Provisioning</b>, Hosting, Continuous 24/7 Vigilance, and Comprehensive Support
         </li>
         <li>
           <b>Diverse Array of Betting Markets,</b> Sports Categories, and League Offerings
         </li>
-        <li>Efficient Bet Acceptance and Accurate Settlement Processes</li>
+        <li>Efficient bet acceptance and accurate settlement processes</li>
         <li>Advanced Risk Management, Robust Accounting, and Vigilant Monitoring Tools</li>
       </ul>
       <p>
@@ -68,7 +68,7 @@
         <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
         <h2 class="sec-header">Be unique</h2>
         <p>
-          <b class="bold">VRNL specializes in custom white-label betting platforms, casinos, and betting, </b>tailored solutions that enhance your brand's identity.
+          <b class="bold">VRNL specializes in custom white-label betting platforms, casinos,  betting, and</b>tailored solutions that enhance your brand's identity.
         </p>
         <p>Our team of experts ensures that every detail, from visually stunning interfaces to logo integration and feature enhancements, aligns with your vision.</p>
         <p>
@@ -91,7 +91,7 @@ Stay ahead of the competition with our advanced <b class="bold">odds management 
           real-time odds adjustments, risk management, and market analysis to help you optimize your sports betting
           offerings and enhance players' experiences.</p>
         <p>
-          Our team of experts is dedicated to helping you succeed. Contact us today to explore how we can take your
+          Our team of specialists is committed to ensuring your success. Contact us today to explore how we can take your
           betting business to the next level.</p>
         <!-- 
           As a leading <b class="bold">white label sports betting platform </b> and <b class="bold"> white label betting platform</b>, we have already seamlessly integrated the world's premier odds providers into our system, and if that doesn't suffice for your requirements, we are more than willing to incorporate your preferred choice as well.
@@ -111,13 +111,12 @@ Stay ahead of the competition with our advanced <b class="bold">odds management 
         <img src="assets/Zero-Risk.png" alt="Zero-Risk" width="90" height="90" />
       </div>
       <div class="risk-para">
-        <h1>Zero risk</h1>
+        <h1>Zero Risk</h1>
         <h2>Trading and risk management services</h2>
         <p>
           We provide comprehensive trading and risk management services, along with expert guidance on odds management.
           Additionally, we offer a unique feature - winnings coverage. In practical terms, this means that if your
-          platform doesn't generate revenue, we step in and cover the payouts to your players. Your peace of mind is our
-          priority.
+          platform doesn't generate revenue, we step in and cover the payouts to your players. We prioritize your peace of mind.
         </p>
       </div>
     </div>
@@ -128,10 +127,10 @@ Stay ahead of the competition with our advanced <b class="bold">odds management 
       <div class="branding-head">
         <h1>Betting Platform Branding</h1>
         <h2>Unlimited layouts</h2>
-        <p>Select from a <b>diverse array of betting layouts</b>, with our extensive range of templates.
+        <p>Select from a <b>diverse array of betting layouts</b> with our extensive range of templates.
           Alternatively, exercise full creative control by crafting your own layout through our <b>API services</b>.
-          With this option, you and your development team can autonomously construct a completely customized User
-          Interface, tailored precisely to your vision.
+          With this option, you and your development team can autonomously construct a completely customized user
+          interface, tailored precisely to your vision.
         </p>
       </div>
     </div>
